tests/paczka1/fuzzy1/56262151.err
Error in line 1: 4nn S614 4,7
Error in line 15: S614 S557 136,97
Error in line 13: T0J S557 20,4
Error in line 17: 4nn A684 77,3
Error in line 4: S614 S557 62,7
Error in line 16: 4fTNV0T3tH A684 48,1
